kubernetes/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-deployment
  labels:
    app: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
      - name: haproxy
        image: haproxy
        ports:
          - containerPort: 80
        volumeMounts:
              - name: config-volume
                mountPath: /usr/local/etc/haproxy/haproxy.cfg:ro
                subPath: HAPROXY_CONFIG
      volumes:
          - name: config-volume
            configMap:
              name: voting-app-config
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
spec:
  selector: 
    app: haproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
