kubernetes/voting-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
  labels:
    app: voting-app
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
    spec:
      containers:
      - name: voting-app
        image: waabuffet/devops-voting-app:haproxy-pretty
        ports:
          - containerPort: 80
        resources:
          # requests:
          #   cpu: 50m
          limits:
            cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
spec:
  sessionAffinity: ClientIP # sticky sessions
  selector: 
    app: voting-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
      nodePort: 30000
