kubernetes/voting-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
spec:
  rules:
  - host: voting-app.local
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haproxy-service
            port:
              number: 80
